2010-01-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/disk.c (grub_disk_read): Fix offset computation when reading
	last sectors.

2010-01-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* commands/hashsum.c (hash_file): Avoid possible stack overflow by
	having a 4KiB and not 32KiB buffer size.

2010-01-27  Robert Millan  <rmh.grub@aybabtu.com>

	* util/hostfs.c: Include `<errno.h>'.
	(grub_hostfs_read): Handle errors from fseeko() and fread().

2010-01-27  Robert Millan  <rmh.grub@aybabtu.com>

	* kern/disk.c (grub_disk_read): Fix bug that would cause infinite
	loop when using read hooks on files whose size isn't sector-aligned.

2010-01-27  Robert Millan  <rmh.grub@aybabtu.com>

	Remove unused parameter.

	* fs/iso9660.c (struct grub_iso9660_data): Remove `length' parameter.
	(grub_iso9660_open): Remove initialization of `data->length'.

2010-01-27  Robert Millan  <rmh.grub@aybabtu.com>

	* util/grub-fstest.c (fstest): Rewrite allocation, fixing a few
	memleak conditions.

2010-01-27  Carles Pina i Estany  <carles@pina.cat>

	* util/lvm.c: New macro LVM_DEV_MAPPER_STRING.
	(grub_util_lvm_isvolume): Use LVM_DEV_MAPPER_STRING.

2010-01-26  Carles Pina i Estany  <carles@pina.cat>

	* util/bin2h.c (usage): Fix warning (space after backslash).

2010-01-26  Carles Pina i Estany  <carles@pina.cat>

	* font/font.c: Include `grub/fontformat.h.
	Remove font file format constants.
	(grub_font_load): Use the new macros.
	* include/grub/fontformat.h: New file.
	* util/grub-mkfont.c: Include `grub/fontformat.c'.
	(write_font_pf2): Use the new macros.

2010-01-26  Robert Millan  <rmh.grub@aybabtu.com>

	* util/bin2h.c (usage): Make --help actually explain what `grub-bin2h'
	does.

2010-01-26  Robert Millan  <rmh.grub@aybabtu.com>

	* include/grub/i386/pc/boot.h (GRUB_BOOT_MACHINE_PXE_DL): New macro.

	* boot/i386/pc/pxeboot.S: Include `<grub/machine/boot.h>'.
	(_start): Macroify `0x7F'.

	* kern/i386/pc/init.c: Include `<grub/machine/boot.h>'.