@@ -419,10 +419,13 @@ grub_cmdline_get (const char *prompt)
 	    int restore;
 	    char *insertu8;
 	    char *bufu8;
+	    grub_uint32_t c;
 
+	    c = buf[lpos];
 	    buf[lpos] = '\0';
 
 	    bufu8 = grub_ucs4_to_utf8_alloc (buf, lpos);
+	    buf[lpos] = c;
 	    if (!bufu8)
 	      {
 		grub_print_error ();
@@ -462,8 +465,19 @@ grub_cmdline_get (const char *prompt)
 				       insertlen, 0);
 		if (t > 0)
 		  {
-		    insert[t] = 0;
-		    cl_insert (insert);
+		    if (insert[t-1] == ' ' && buf[lpos] == ' ')
+		      {
+			insert[t-1] = 0;
+			if (t != 1)
+			  cl_insert (insert);
+			lpos++;
+			cl_set_pos_all ();			
+		      }
+		    else
+		      {
+			insert[t] = 0;
+			cl_insert (insert);
+		      }
 		  }
 
 		grub_free (insertu8);
